second attempt, tiger is angry

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://makarov-lesha.github.io//first-deployed-app.io",
+  "homepage": "http://makarov-lesha.github.io//first-app-7",
   "name": "first-deployed-app",
   "version": "0.1.0",
   "private": true,
